--- a/app/src/main/res/layout/user_agreement.xml
+++ b/app/src/main/res/layout/user_agreement.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/bgcolor"
     android:layout_gravity="center"
+    android:padding="15dp"
     android:orientation="vertical">
 
     <TextView
@@ -14,7 +15,7 @@
         android:padding="10dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/text_color"
+        android:textColor="@color/text_dark_blue"
         android:textSize="25sp" />
 
     <TextView
@@ -24,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:autoLink="all"
-        android:padding="2dp"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/text_color" />
