--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -18,140 +18,140 @@
         android:textColor="@color/text_view"
         android:textSize="16sp" />
 
-        <LinearLayout
-            android:id="@+id/relativeLayout2"
-            android:layout_below="@+id/textView_laundry_name"
+    <LinearLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView_laundry_name"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical">
+            android:layout_below="@+id/textView_laundry_name"
+            android:layout_marginTop="7dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_laundry_name"
-                android:layout_marginTop="7dp">
+                android:layout_centerVertical="true"
+                android:text="@string/item"
+                android:textColor="@color/text_color"
+                android:textSize="14sp" />
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="ITEM"
-                    android:textColor="@color/text_color"
-                    android:textSize="14sp" />
-
-                <Spinner
-                    android:id="@+id/spinner_laundry"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="100dp"
-                    android:background="@drawable/edittextstyle"
-                    android:paddingRight="35dp" />
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/dwnbtn" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
+            <Spinner
+                android:id="@+id/spinner_laundry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_laundry_name"
-
-                android:layout_marginTop="7dp">
-
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="SERVICE"
-                    android:textColor="@color/text_color"
-                    android:textSize="14sp" />
-
-                <Spinner
-                    android:id="@+id/spinner_laundry2"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="100dp"
-                    android:background="@drawable/edittextstyle"
-                    android:paddingRight="35dp" />
-
-                <ImageView
-                    android:id="@+id/imageView111"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/dwnbtn" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_laundry_name"
-                android:layout_marginTop="7dp">
-
-                <TextView
-                    android:id="@+id/textView23"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/quality"
-                    android:textColor="@color/text_color"
-                    android:textSize="14sp" />
-
-                <EditText
-                    android:id="@+id/spinner_laundry3"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="100dp"
-                    android:background="@drawable/edittextstyle"
-                    android:ems="10"
-                    android:inputType="number"
-                    android:paddingLeft="34dp"
-                    android:paddingRight="35dp"
-                    android:text="1" />
-
-                <ImageView
-                    android:id="@+id/imageView121"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/minus" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignLeft="@+id/spinner_laundry3"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/plus" />
-
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/button_add"
-                android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:layout_gravity="right"
-                android:layout_marginTop="7dp"
-                android:background="@drawable/button_selector"
-                android:text="ADD"
-                android:textColor="@color/button_title_color" />
-        </LinearLayout>
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
+                android:background="@drawable/edittextstyle"
+                android:paddingRight="35dp" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/dwnbtn" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView_laundry_name"
+
+            android:layout_marginTop="7dp">
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/service"
+                android:textColor="@color/text_color"
+                android:textSize="14sp" />
+
+            <Spinner
+                android:id="@+id/spinner_laundry2"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
+                android:background="@drawable/edittextstyle"
+                android:paddingRight="35dp" />
+
+            <ImageView
+                android:id="@+id/imageView111"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/dwnbtn" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView_laundry_name"
+            android:layout_marginTop="7dp">
+
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/quality"
+                android:textColor="@color/text_color"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/spinner_laundry3"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
+                android:background="@drawable/edittextstyle"
+                android:ems="10"
+                android:inputType="number"
+                android:paddingLeft="34dp"
+                android:paddingRight="35dp"
+                android:text="1" />
+
+            <ImageView
+                android:id="@+id/imageView121"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/minus" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignLeft="@+id/spinner_laundry3"
+                android:layout_centerVertical="true"
+                android:src="@drawable/plus" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/button_add"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/button_selector"
+            android:text="@string/add"
+            android:textColor="@color/button_title_color" />
+    </LinearLayout>
 
 
     <RelativeLayout
@@ -188,7 +188,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Item"
+                android:text="@string/item"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
@@ -198,7 +198,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Service"
+                android:text="@string/service"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
@@ -208,7 +208,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Rate"
+                android:text="@string/rate"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
@@ -218,7 +218,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Qty"
+                android:text="@string/qty"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
@@ -228,7 +228,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Amt"
+                android:text="@string/amt"
                 android:textColor="@color/white"
                 android:textSize="12dp" />
 
@@ -268,7 +268,7 @@
         android:layout_marginBottom="4dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/button_selector"
-        android:text="SUBMIT"
+        android:text="@string/submit"
         android:textColor="@color/button_title_color" />
 
 
