--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,7 +63,7 @@
     </style>
     
     <!--  Transparent dialog -->
-    <style name="TransparentProgressDialog" parent="@android:Theme.Dialog">
+    <style name="TransparentProgressDialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
@@ -74,6 +74,9 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
-
+<style name="CustomSpinner" parent="Widget.AppCompat.Spinner">
+    <item name="android:background">@drawable/edittextstyle</item>
+    <item name="android:drawable">@drawable/dwnbtn</item>
+</style>
 
 </resources>
