--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,21 +3,18 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
     android:layout_gravity="center"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
     android:gravity="center"
+    android:padding="40dp"
     android:paddingBottom="50dp">
 
     <EditText
         android:id="@+id/editText_username"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:hint="Email Address"
+        android:hint="@string/emailaddress"
         android:inputType="textEmailAddress"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -34,7 +31,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -49,38 +46,28 @@
         android:layout_below="@+id/EditText_password"
         android:layout_marginTop="15dp"
         android:background="@color/bgcolor_heading"
-        android:text="SIGN IN"
+        android:text="@string/signin"
         android:textColor="@color/button_title_color" />
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <CheckBox
+        android:id="@+id/imageView_remember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/but_submit"
-        android:gravity="center_vertical">
-
-
-
-
-        <CheckBox
-            android:id="@+id/imageView_remember"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="12sp"
-            android:text="Remember Me"
-        />    </LinearLayout>
+        android:padding="5dp"
+        android:text="@string/rememberme"
+        android:textSize="14sp" />
 
     <TextView
+
         android:id="@+id/textView_new_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_below="@+id/imageView_remember"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:padding="10dp"
-        android:text="NEW USER"
+        android:text="@string/newuser"
         android:textColor="@color/bgcolor_heading" />
 </RelativeLayout>
