--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -9,6 +9,7 @@
         android:id="@+id/direct_to_home"
         android:icon="@drawable/home"
         android:title="Home"
+         android:visible="false"
         app:showAsAction="always"/>
   
   
