--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -133,8 +133,7 @@
             android:id="@+id/EditText_address"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_alignLeft="@+id/EditText_phone"
-            android:layout_alignRight="@+id/EditText_phone"
+            android:padding="5dp"
             android:layout_below="@+id/EditText_phone"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittextstyle"
@@ -142,8 +141,6 @@
             android:gravity="top|left"
             android:hint="@string/address_small"
             android:inputType="textMultiLine"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:scrollHorizontally="false"
             android:textColor="@color/edit_text_text"
             android:textColorHint="@color/hint_color"/>
@@ -172,7 +169,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittextstyle"
             android:ems="10"
-            android:hint="Country"
+            android:hint="@string/country"
             android:inputType="text"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
@@ -188,7 +185,7 @@
             android:layout_below="@+id/EditText_country"
             android:layout_marginTop="15dp"
             android:background="@drawable/submit_btn"
-            android:text="SIGN UP"
+            android:text="@string/signup"
             android:textColor="@color/button_title_color" />
 
         <TextView
