--- a/app/src/main/res/layout/new_invoice.xml
+++ b/app/src/main/res/layout/new_invoice.xml
@@ -30,17 +30,11 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/buttonstyle"
         android:lineSpacingMultiplier="1.2"
-        android:padding="5dp"
+        android:padding="10dp"
         android:text=" "
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/text_color" />
@@ -50,69 +44,61 @@
         android:id="@+id/main_invoice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-
-        android:background="#004765">
-
+        android:background="#004765"
+        android:gravity="center"
+        android:padding="5dp"
+        >
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="5dp"
-            android:text="Item"
+            android:text="@string/item"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="5dp"
-            android:text="Service"
+            android:text="@string/service"
 
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="5dp"
-            android:text="Rate"
+            android:text="@string/rate"
             android:textAppearance="?android:attr/textAppearanceSmall"
 
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="5dp"
-            android:text="Qnty"
+            android:text="@string/qty"
             android:textAppearance="?android:attr/textAppearanceSmall"
 
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="5dp"
-            android:text="Amnt"
+            android:text="@string/amount"
             android:textAppearance="?android:attr/textAppearanceSmall"
 
             android:textColor="@color/white" />
@@ -129,7 +115,7 @@
         android:layout_marginTop="1dp"
         android:background="@color/bgcolor"
         android:divider="@color/bgcolor"
-        android:dividerHeight="1dp"></ListView>
+        android:dividerHeight="1dp"/>
 
     <Button
         android:id="@+id/button1"
