--- a/app/src/main/res/layout/new_invoice_items.xml
+++ b/app/src/main/res/layout/new_invoice_items.xml
@@ -7,66 +7,63 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:background="@drawable/bor_shape"
         android:id="@+id/invoice_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/buttonstyle"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="center"
             android:text="Item"
-
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/service"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="center"
             android:padding="5dp"
             android:text="Service"
-
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="center"
             android:padding="5dp"
             android:text="Rate"
             android:textAppearance="?android:attr/textAppearanceSmall"
-
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="center"
             android:padding="5dp"
             android:text="Qnty"
             android:textAppearance="?android:attr/textAppearanceSmall"
-
             android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:padding="5dp"
