--- a/app/src/main/res/layout/new_order_history.xml
+++ b/app/src/main/res/layout/new_order_history.xml
@@ -23,55 +23,54 @@
 
     <LinearLayout
         android:id="@+id/ll"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView_banner"
         android:background="@color/btn_bgcolor"
         android:orientation="horizontal"
-        android:weightSum="4">
+        >
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="Date"
+            android:layout_weight="6"
+            android:gravity="left"
+            android:text="@string/date"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="Order Id"
+            android:layout_weight="6"
+            android:gravity="left"
+            android:text="@string/orderid"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="Amount"
+            android:layout_weight="6"
+            android:gravity="left"
+            android:text="@string/amount"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white" />
 
         <ImageView
             android:id="@+id/imgView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
             android:gravity="end"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_action_arrow"
             android:visibility="invisible" />
 
