--- a/app/src/main/res/layout/order_history.xml
+++ b/app/src/main/res/layout/order_history.xml
@@ -3,62 +3,54 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#e3e3e3"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:orientation="horizontal">
+    android:background="@color/order_listitem_back"
+    android:orientation="horizontal"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="5dp"
+    >
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-
-            android:padding="5dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:gravity="left|center_vertical"
             android:text="5/3/15"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_color" />
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:padding="10dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:gravity="left|center_vertical"
             android:text="xyz123"
-
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_color" />
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="5dp"
-
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:gravity="left|center_vertical"
             android:text="60.00"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_color" />
 
         <ImageView
+            android:layout_weight="1"
             android:id="@+id/imgView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
-            android:gravity="end"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:src="@drawable/ic_action_arrow" />
-
-    </LinearLayout>
-
 </LinearLayout>
