--- a/app/src/main/res/drawable/drawer_pressed.xml
+++ b/app/src/main/res/drawable/drawer_pressed.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/topbar_back"
-        android:endColor="@color/topbar_back"/>
+        android:endColor="@color/topbar_light_pressed"
+        android:startColor="@color/topbar_light_pressed" />
 </shape>
