--- a/app/src/main/res/layout/new_invoice_items.xml
+++ b/app/src/main/res/layout/new_invoice_items.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:background="@drawable/bor_shape"
         android:id="@+id/invoice_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:background="@drawable/bor_shape"
         android:orientation="horizontal"
         >
 
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|left"
             android:padding="5dp"
             android:text="Service"
             android:textAppearance="?android:attr/textAppearanceSmall"
