--- a/app/src/main/res/layout/user_agreement.xml
+++ b/app/src/main/res/layout/user_agreement.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -18,15 +19,27 @@
         android:textColor="@color/text_dark_blue"
         android:textSize="25sp" />
 
-    <TextView
+    <!--<TextView-->
 
-        android:id="@+id/message"
+    <!--android:id="@+id/message"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:autoLink="all"-->
+    <!--android:gravity="center_horizontal"-->
+    <!--android:text="Medium Text"-->
+    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+    <!--android:textColor="@color/text_color" />-->
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:autoLink="all"
-        android:gravity="center_horizontal"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/text_color" />
+        android:layout_height="wrap_content">
 
+        <com.bluejamesbond.text.DocumentView
+            android:id="@+id/text_useragreement_justified"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:documentView_text="@string/user_agree"
+            app:documentView_textSize="12.5dp"
+            app:documentView_wordSpacingMultiplier="2.0" />
+    </ScrollView>
 </LinearLayout>
